# im_dynamic_editor

./: .gitmodules  CMakeLists.txt
example/: CMakeLists.txt  main.cpp
inc/dynamic_editor/api/: dynamic_editor.hpp
inc/dynamic_editor/nodes/: attribute.hpp  link.hpp  node.hpp
inc/dynamic_editor/utils/: imgui_extras.hpp
inc/dynamic_editor/views/: editor.hpp  inspector.hpp  viewer.hpp
src/api/: dynamic_editor.cpp
src/nodes/: attribute.cpp  link.cpp  node.cpp
src/utils/: imgui_extras.cpp
src/views/: editor.cpp  inspector.cpp  viewer.cpp
widgets/inc/: guages.hpp  inputs.hpp  plots.hpp
widgets/src/: guages.cpp  register_widgets.cpp
